[tool.poetry]
name = "modpoll2mqtt"
version = "2.1.1"
description = "Modbus to MQTT gateway — fork of modpoll"
authors = ["yoch <yoch.melka@gmail.com>"]
repository = "https://github.com/yoch/modpoll2mqtt"
documentation = "https://yoch.github.io/modpoll2mqtt"
homepage = "https://github.com/yoch/modpoll2mqtt"
readme = "README.md"
packages = [{ include = "modpoll" }]
license = "MIT"
keywords = [
    "modbus",
    "modpoll",
    "mqtt",
    "gateway",
    "bridge",
    "iot",
    "industrial-automation",
    "building-automation",
    "modbus-tcp",
    "modbus-rtu",
    "modbus-udp",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: System :: Monitoring",
    "Topic :: Home Automation",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pymodbus = ">=3.10,<4.0"
paho-mqtt = "^2.1.0"
prettytable = "^3.9.0"
requests = "^2.32.5"
pyserial = { version = "^3.5", optional = true }

[tool.poetry.extras]
serial = ["pyserial"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
pytest = "^8.2.2"
deptry = "^0.16.1"
tox = "^4.16.0"

[tool.poetry.group.docs.dependencies]
sphinx = ">=6,<8"
sphinx-argparse = "^0.3.1"
sphinx-rtd-theme = "^1.0.0"
sphinx-autobuild = "2021.3.14"
pandoc = "^2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.deptry]
package_module_name_map = { pyserial = "serial" }

[tool.deptry.per_rule_ignores]
DEP002 = ["pyserial"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: marks tests as integration tests"]

[tool.poetry.scripts]
modpoll = "modpoll.main:app"
